Form display and layout completed

--- a/over/app/src/main/res/values/strings.xml
+++ b/over/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">OverboxSample</string>
+    <string name="app_name">Overboxd</string>
     <string name="action_settings">Settings</string>
 </resources>
